--- a/css/style.css
+++ b/css/style.css
@@ -58,3 +58,153 @@
 #navbar-items .nav-item {
 	margin: 0 1em;
 }
+
+/* SLIDER */
+#slider {
+	margin-top: 1em;
+	margin-bottom: 1em;	
+}
+
+#slider .carousel-caption {
+	bottom: 3em;
+}
+
+#slider .carousel-caption h5 {
+	font-size: 2.5em;
+	text-shadow: #000 2px 2px;
+}
+
+.btn {
+	border-radius: 0;
+}
+
+#slider .btn {
+	padding: 0.3em 0.8em;
+	font-size: 1em;
+	margin-top: 1em;
+}
+
+.carousel-control-prev i,
+.carousel-control-next i {
+	color: #111;
+	font-size: 3em;
+}
+
+.carousel-indicators [data-bs-target] {
+	background-color: #222;
+	opacity: 0.8;
+}
+
+.carousel-indicators.active {
+	background-color: #000;
+}
+
+@media (min-width: 768px) {
+	#slider .carousel-caption {
+		bottom: 15em;
+	}
+
+	#slider .carousel-caption h5 {
+		font-size: 4em;
+		text-shadow: #000 3px 2px;
+	}
+
+	#slider .btn {
+		padding: 0.6em 0.8em;
+		font-size: 1.2em;
+	}
+
+	.carousel-indicators {
+		bottom: 7em;
+	}
+}
+/* MINI BANNERS */
+#mini-banners {
+	margin-bottom: 4rem;
+}
+
+#mini-banners .card {
+	padding: 2em 0.3em;
+	border-radius: 0;
+	margin-bottom: 1em;
+}
+
+#mini-banners i {
+	font-size: 4em;
+}
+
+#mini-banners .card-title {
+	margin-bottom: 1.5em;
+}
+
+#mini-banners .btn {
+	margin-top: 1.5em;
+	padding: 0.6em 1.2em;
+}
+
+@media (min-width: 768px) {
+	#mini-banners {
+		margin-top: -6em;
+	}
+}
+
+/* DESTAQUES */
+#featured-container {
+	margin-bottom: 4em;
+}
+
+.title {
+	position: relative;
+	font-size: 1.75em;
+	margin-bottom: 0.4em;
+}
+
+.title::before {
+	position: absolute;
+	content: '';
+	width: 25px;
+	border-top: 4px solid #7a7a7a;
+	bottom: 2em;
+}
+
+#featured-images {
+	margin-top: 2em;
+}
+
+#featured-images .col-md-4 {
+	position: relative;
+	cursor: pointer;
+}
+
+#featured-images .col-md-4:hover .banner-content {
+	opacity: 0.6;
+}
+
+#featured-images .banner-content {
+	position: absolute;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	top: 0;
+	left: 0;
+	height: 100vh;
+	width: 100%;
+	background-color: #FFF;
+	opacity: 0.6;
+	transition: 0.5s;
+}
+
+@media (min-width: 768px) {
+	.title {
+		font-size: 2.4em;
+	}
+
+	.title:before {
+		bottom: 1.5em
+	}
+
+	#featured-images .banner-content {
+		opacity: 0;
+	}
+}
